--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -1,1 +1,22 @@
 name: backend-workflow
+
+on: [push, workflow_dispatch]
+
+jobs:
+    
+  setup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Install Bun
+        run: | 
+            curl -fsSL https://bun.sh/install | bash
+            bun --version
+
+      - name: Install Dependencies
+        run: bun install
+
+      - name: Run Tests
+        run: bun test
