--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -3,7 +3,7 @@ name: backend-workflow
 on: [push, workflow_dispatch]
 
 jobs:
-    
+
   setup:
     runs-on: ubuntu-latest
     steps:
@@ -11,9 +11,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Bun
-        run: | 
-            curl -fsSL https://bun.sh/install | bash
-            bun --version
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+          export BUN_INSTALL="$HOME/.bun"
+          export PATH="$BUN_INSTALL/bin:$PATH"
+          bun --version # Confirm installation
 
       - name: Install Dependencies
         run: bun install
